# qelm-crs

./: .gitignore  README.md  pyproject.toml  train_colab.ipynb
src/qelm/: __init__.py
src/qelm/agents/: __init__.py
src/qelm/data/: __init__.py  reddit_scraper.py
src/qelm/models/: __init__.py  embedding_qelm.py  two_tower_recommender.py
src/qelm/training/: __init__.py  stage1_supervised.py
src/qelm/utils/: __init__.py  preference_extractor.py
