[tool.poetry]
name = "qelm-crs"
version = "0.1.0"
description = "Question Embedding Learning for Conversational Recommendation Systems"
authors = ["Aleksandra Makarova <a.makarova@pgr.reading.ac.uk>"]
readme = "README.md"
packages = [{include = "qelm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.0.0", source = "pytorch"}
torchvision = {version = "^0.15.0", source = "pytorch"}
torchaudio = {version = "^2.0.0", source = "pytorch"}
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
stable-baselines3 = {extras = ["extra"], version = "^2.2.0"}
openai = "^1.3.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
chromadb = "^0.4.18"
datasets = "^2.14.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
python-dotenv = "^1.0.0"
wandb = "^0.16.0"
hydra-core = "^1.3.0"
gymnasium = "^0.29.0"
faiss-cpu = "^1.7.4"
huggingface-hub = "^0.19.0"
tqdm = "^4.66.0"
tensorboard = "^2.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
ipykernel = "^6.25.0"
pre-commit = "^3.5.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]